--- a/long-request/package.json
+++ b/long-request/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel index.html"
   },
   "dependencies": {
@@ -21,6 +21,9 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "jest": "^26.6.1",
     "postcss-modules": "^2.0.0"
   },
   "browserslist": [
